--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-quarkus.kogito.devservices.enabled=false
-quarkus.devservices.enabled=false
+# Set these to true if dev services are being used in this project.
+# By default, they are not, and there are no dependencies which use them.
+# Read more about Quarkus DevServices at https://quarkus.io/guides/dev-services
+
+#quarkus.kogito.devservices.enabled=false
+#quarkus.devservices.enabled=false
